--- a/README.adoc
+++ b/README.adoc
@@ -1,30 +1,40 @@
 = Maven
 
+An example of resources filtering by using external properties.
+
 .pom.xml
 [source,xml]
 ----
-	<profiles>
-		<profile>
-			<id>dev</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<filter.name>dev</filter.name>
-			</properties>
-		</profile>
-		<profile>
-			<id>prod</id>
-			<properties>
-				<filter.name>prod</filter.name>
-			</properties>
-		</profile>
-	</profiles>
+<profiles>
+    <profile>
+        <id>dev</id>
+        <activation>
+            <activeByDefault>true</activeByDefault>
+        </activation>
+        <properties>
+            <filter.name>dev</filter.name>
+        </properties>
+    </profile>
 
-	<build>
-		<filters>
-			<filter>src/main/filters/base.properties</filter>
-			<filter>src/main/filters/${filter.name}.properties</filter>
-		</filters>
-	</build>
+    <profile>
+        <id>prod</id>
+        <properties>
+            <filter.name>prod</filter.name>
+        </properties>
+    </profile>
+</profiles>
+
+<build>
+    <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+        </resource>
+    </resources>
+
+    <filters>
+        <filter>src/main/filters/base.properties</filter>
+        <filter>src/main/filters/${filter.name}.properties</filter>
+    </filters>
+</build>
 ----
